Updated xrefs to "for/see" format.

--- a/modules/reference/pages/systems/activation-keys.adoc
+++ b/modules/reference/pages/systems/activation-keys.adoc
@@ -9,9 +9,7 @@ With such an activation key, register a {sle} or Red Hat Enterprise Linux system
 System-specific activation keys created through the [guimenu]``Reactivation`` subtab of the [guimenu]``System Details`` page are not part of this list because they are not reusable across systems.
 ====
 
-For more information about Activation Keys, see
-xref:client-configuration:creating-activation-keys.adoc[]
-and: xref:client-configuration:client-and-activation-keys.adoc[]
+For more information about activation keys, see xref:client-configuration:creating-activation-keys.adoc[] and xref:client-configuration:client-and-activation-keys.adoc[].
 
 
 
@@ -29,7 +27,7 @@ To create an activation key:
 . Select menu:Main Menu[Systems > Activation Keys] from the left bar.
 . Click the [guimenu]``Create Key`` link at the upper right corner.
 . [guimenu]``Description`` -- Enter a [guimenu]``Description`` to identify the generated activation key.
-. [guimenu]``Key`` -- Either choose automatic generation by leaving this field blank or enter the key you want to generate in the [guimenu]``Key`` field. This string of characters can then be used with [command]``rhnreg_ks`` to register client systems with {productname}. Refer to xref:reference:systems/activation-keys.adoc[] for details.
+. [guimenu]``Key`` -- Either choose automatic generation by leaving this field blank or enter the key you want to generate in the [guimenu]``Key`` field. This string of characters can then be used with [command]``rhnreg_ks`` to register client systems with {productname}. For more details, see xref:reference:systems/activation-keys.adoc[].
 +
 [WARNING]
 .Allowed Characters
