--- a/modules/reference/pages/systems/autoinst-distributions.adoc
+++ b/modules/reference/pages/systems/autoinst-distributions.adoc
@@ -61,5 +61,4 @@ In {ay} profiles you can use such variables as well.
 
 Using variables are just one part of the larger Cobbler infrastructure for creating templates that can be shared between multiple profiles and systems.
 
-Refer to, xref:client-configuration:cobbler.adoc[]  for more information about working with Cobbler and templates.
-
+For more information about Cobbler and templates, see xref:client-configuration:cobbler.adoc[].  
