--- a/modules/reference/pages/systems/autoinst-profile-details.adoc
+++ b/modules/reference/pages/systems/autoinst-profile-details.adoc
@@ -88,7 +88,7 @@ Understanding this hierarchy can alleviate confusion when using variables in {ki
 
 
 Using variables are just one part of the larger Cobbler infrastructure for creating templates that can be shared between multiple profiles and systems.
-For more information about Cobbler and templates, refer to xref:client-configuration:cobbler.adoc[].
+For more about Cobbler and templates, see xref:client-configuration:cobbler.adoc[].
 
 
 
@@ -166,7 +166,7 @@ volgroup myvg pv.01 logvol / --vgname=myvg --name=rootvol --size=1000 --grow
 
 If you have previously created a file preservation list, include this list as part of the {kickstart}.
 This will protect the listed files from being over-written during the installation process.
-Refer to xref:reference:systems/autoinst-file-preservation.adoc[] for information on how to create a file preservation list.
+For more on file preservation lists, see xref:reference:systems/autoinst-file-preservation.adoc[].
 
 
 
@@ -213,7 +213,7 @@ If you would like to know what package groups are available, and what packages t
 == Package Profiles
 
 If you have previously created a Package Profile from one of your registered systems, you can use that profile as a template for the files to be installed on a kickstarted system.
-Refer to xref:reference:systems/system-details/sd-packages.adoc#s1-package-profiles[] for more information about package profiles.
+For more about package profiles, see xref:reference:systems/system-details/sd-packages.adoc#s1-package-profiles[].
 
 
 
@@ -278,17 +278,17 @@ Click the [guimenu]``Upload Kickstart/Autoyast File`` link from the menu:Systems
 
 . In the first line, enter a profile [guimenu]``Label`` for the automated installation. This label[] drop-down menu is only populated if one or more distributions have been created for the selected base channel (see xref:reference:systems/autoinst-distributions.adoc[]).
 . Instead of selecting a specific tree, you can also check the box [guimenu]``Always use the newest Tree`` for this base channel. This setting lets {productname} automatically pick the latest tree that is associated with the specified base channels. If you add new trees later, {productname} will always keep the most recently created or modified.
-. Select the [guimenu]``Virtualization Type`` from the drop-down menu. For more information about virtualization with **traditional clients**, refer to xref:administration:virtualization.adoc[].
+. Select the [guimenu]``Virtualization Type`` from the drop-down menu. For more information about virtualization with **traditional clients**, see xref:administration:virtualization.adoc[].
 
 +
 NOTE: If you do not intend to use the autoinstall profile to create virtual guest systems, you can leave the drop-down set to the default choice [guimenu]``KVM Virtualized Guest``.
 +
 
-. Finally, either provide the file contents with cut-and-paste or update the file from the local storage medium:
+. Either cut-and-paste the file contents, or update the file from the local storage medium:
 ** Paste it into the [guimenu]``File Contents`` box and click [guimenu]``Create``, or
 ** enter the file name in the [guimenu]``File to Upload`` field and click btn:[Upload File].
 
-Once done, four subtabs are available:
+Four subtabs are now available:
 
 * [guimenu]``Details``
 * [guimenu]``Bare Metal``
