--- a/modules/reference/pages/systems/system-details.adoc
+++ b/modules/reference/pages/systems/system-details.adoc
@@ -105,7 +105,7 @@ Indicates whether a system has been locked.
 Actions cannot be scheduled for locked systems on the Web interface until the lock is removed manually.
 This does not include preventing automated patch updates scheduled via the Web interface.
 To prevent the application of automated patch updates, deselect menu:System Details[Properties > Auto Patch Update].
-For more information, refer to xref:reference:systems/system-details/sd-properties.adoc[].
+For more information, see xref:reference:systems/system-details/sd-properties.adoc[].
 +
 
 Locking a system can prevent you from accidentally changing a system.
@@ -119,12 +119,12 @@ For example, if a user logs in to the client directly and runs {yast} Online Upd
 
 Locking a system _does not_ restrict the number of users who can access the system via the Web interface.
 If you want to restrict access to the system, associate that system with a System Group and assign a System Group Administrator to it.
-Refer to xref:reference:systems/system-groups.adoc[] for more information about System Groups.
+For more information about system groups, see xref:reference:systems/system-groups.adoc[].
 ====
 +
 
 It is also possible to lock multiple systems via the System Set Manager.
-Refer to xref:reference:systems/ssm-overview.adoc#s4-sm-ssm-misc-lock[] for instructions.
+For instructions, see xref:reference:systems/ssm-overview.adoc#s4-sm-ssm-misc-lock[].
 
 
 === Subscribed Channels
