--- a/modules/reference/pages/systems/system-details/sd-packages.adoc
+++ b/modules/reference/pages/systems/system-details/sd-packages.adoc
@@ -3,7 +3,7 @@
 
 Manage the software packages on the system.
 Most of the following actions can also be performed via action chains.
-For further information on action chains, see xref:reference:schedule/action-chains.adoc[].
+For more about action chains, see xref:reference:schedule/action-chains.adoc[].
 
 
 image::system_details_traditional_software_packages.png[scaledwidth=80%]
