--- a/modules/reference/pages/systems/system-details/sd-properties.adoc
+++ b/modules/reference/pages/systems/system-details/sd-properties.adoc
@@ -58,5 +58,5 @@ To confirm any changes to these fields, click the btn:[Update Properties] button
 .Setting Properties for Multiple Systems
 ====
 Many of these properties can be set for multiple systems in one go via the System Set Manager interface.
-For details, see xref:reference:systems/ssm-overview.adoc[].
+For more information, see xref:reference:systems/ssm-overview.adoc[].
 ====
