--- a/modules/reference/pages/systems/system-groups.adoc
+++ b/modules/reference/pages/systems/system-groups.adoc
@@ -5,19 +5,29 @@ The [guimenu]``System Groups`` page allows {productname} users to view the [guim
 
 image::systems_systemgroups.png[scaledwidth=80%]
 
-Only **System Group Administrators** and **{productname} Administrators** may perform the following additional tasks:
+Only **System Group Administrators** and **{productname} Administrators** have permission to perform these additional tasks:
 
-* Create system groups. (Refer to <<ref.webui.systems.systemgroups.create>>.)
-* Add systems to system groups. (Refer to <<ref.webui.systems.systemgroups.add>>.)
-* Remove systems from system groups. (Refer to xref:reference:systems/system-details/sd-groups.adoc[].)
-* Assign system group permissions to users. (Refer to xref:reference:users/system-group-configuration.adoc[].)
+* Create system groups
+* Add systems to system groups
+* Remove systems from system groups
+* Assign system group permissions to users
+
+For more information about system groups, see xref:reference:systems/system-details/sd-groups.adoc[].
+For more information about configuring system groups, see xref:reference:users/system-group-configuration.adoc[].
 
 
 The [guimenu]``System Groups`` list displays all system groups.
 The list contains several columns for each group:
 
-* [guimenu]``Select`` -- Via the check boxes add all systems in the selected groups to the [guimenu]``System Set Manager`` by clicking the btn:[Update] button. All systems in the selected groups are added to the [guimenu]``System Set Manager`` . You can then use the [guimenu]``System Set Manager`` to perform actions on them simultaneously. It is possible to select only those systems that are members of all of the selected groups, excluding those systems that belong only to one or some of the selected groups. To do so, select the relevant groups and click the btn:[Work with Intersection] button. To add all systems of all selected groups, click the btn:[Work with Union] button. Each system will show up once, regardless of the number of groups to which it belongs. Refer to xref:reference:systems/ssm-overview.adoc[] for details.
-* [guimenu]``Updates`` -- Shows which type of patch alerts are applicable to the group or confirms that all systems are up-to-date. Clicking a group's status icon takes you to the [guimenu]``Patch`` tab of its [guimenu]``System Group Details`` page. Refer to xref:reference:systems/system-groups.adoc[] for more information.
+* [guimenu]``Select`` -- Via the check boxes add all systems in the selected groups to the [guimenu]``System Set Manager`` by clicking the btn:[Update] button.
+All systems in the selected groups are added to the [guimenu]``System Set Manager``.
+You can then use the [guimenu]``System Set Manager`` to perform actions on them simultaneously.
+It is possible to select only those systems that are members of all of the selected groups, excluding those systems that belong only to one or some of the selected groups.
+To do so, select the relevant groups and click the btn:[Work with Intersection] button.
+To add all systems of all selected groups, click the btn:[Work with Union] button.
+Each system will show up once, regardless of the number of groups to which it belongs.
+* [guimenu]``Updates`` -- Shows which type of patch alerts are applicable to the group or confirms that all systems are up-to-date.
+Clicking a group's status icon takes you to the [guimenu]``Patch`` tab of its [guimenu]``System Group Details`` page.
 +
 
 The status icons call for differing degrees of attention:
@@ -26,9 +36,15 @@ The status icons call for differing degrees of attention:
 ** image:fa-exclamation-circle.svg[Exclamation Circle,scaledwidth=1.6em] -- Critical patches available, update _strongly_ recommended.
 ** image:fa-warning.svg[Warning,scaledwidth=1.6em] -- Updates available and recommended.
 * [guimenu]``Health`` Status of the systems in the group, reported by probes.
-* [guimenu]``Group Name`` -- The name of the group as configured during its creation. The name should be explicit enough to distinguish from other groups. Clicking the name of a group takes you to the [guimenu]``Details`` tab of its [guimenu]``System Group Details`` page. Refer to xref:reference:systesms/system-groups.adoc[] for more information.
-* [guimenu]``Systems`` -- Total number of systems in the group. Clicking the number takes you to the [guimenu]``Systems`` tab of the [guimenu]``System Group Details`` page for the group. Refer to xref:reference:systesms/system-groups.adoc[] for more information.
-* [guimenu]``Use in SSM`` -- Clicking the [guimenu]``Use in SSM`` link in this column loads all and only the systems in the selected group and launches the [guimenu]``System Set Manager`` immediately. Refer to xref:reference:systems/ssm-overview.adoc[] for more information.
+* [guimenu]``Group Name`` -- The name of the group as configured during its creation.
+The name should be explicit enough to distinguish from other groups.
+Clicking the name of a group takes you to the [guimenu]``Details`` tab of its [guimenu]``System Group Details`` page.
+* [guimenu]``Systems`` -- Total number of systems in the group.
+Clicking the number takes you to the [guimenu]``Systems`` tab of the [guimenu]``System Group Details`` page for the group.
+* [guimenu]``Use in SSM`` -- Clicking the [guimenu]``Use in SSM`` link in this column loads all and only the systems in the selected group and launches the [guimenu]``System Set Manager`` immediately.
+
+For more on system groups, see xref:reference:systems/system-groups.adoc[].
+For more on the System Set Manager, see xref:reference:systems/ssm-overview.adoc[].
 
 
 
@@ -63,7 +79,7 @@ Select the systems and click the btn:[Add Systems] button.
 At the top of each [guimenu]``System Group Details`` page are two links: [guimenu]``Delete Group`` and [guimenu]``Work With Group``.
 Clicking [guimenu]``Delete Group`` deletes the System Group and should be used with caution.
 Clicking [guimenu]``Work With Group`` loads the group's systems and launches the [guimenu]``System Set Manager`` immediately like the [guimenu]``Use Group`` button from the [guimenu]``System Groups`` list.
-Refer to xref:reference:systems/ssm-overview.adoc[] for more information.
+For more on the System Set Manager, see xref:reference:systems/ssm-overview.adoc[].
 
 The [guimenu]``System Group Details`` page is split into the following tabs:
 
@@ -85,7 +101,9 @@ Clicking links within the table takes you to corresponding tabs within the [guim
 To remove systems from the group, select the appropriate check boxes and click the btn:[Remove Systems] button on the bottom of the page.
 Clicking it does not delete systems from {productname} entirely.
 This is done through the [guimenu]``System Set Manager`` or [guimenu]``System Details`` pages.
-Refer to xref:reference:systems/ssm-overview.adoc[] or xref:reference:systems/system-details.adoc[], respectively.
+
+For more on the System Set Manager, see xref:reference:systems/ssm-overview.adoc[].
+For more on system details, see xref:reference:systems/system-details.adoc[].
 
 
 
@@ -102,7 +120,7 @@ To add systems to the specified system group, click the check boxes to their lef
 
 List of relevant patches for systems in the system group.
 Clicking the advisory takes you to the [guimenu]``Details`` tab of the [guimenu]``Patch Details`` page.
-(Refer to xref:reference:patches/patch-details.adoc[] for more information.)
+For more on patches, see xref:reference:patches/patch-details.adoc[].
 Clicking the Affected Systems number lists all of the systems affected by the patch.
 To apply the patch updates in this list, select the systems and click the btn:[Apply Patches] button.
 
