--- a/modules/reference/pages/systems/virtual-host-managers.adoc
+++ b/modules/reference/pages/systems/virtual-host-managers.adoc
@@ -25,8 +25,7 @@ Log files for the [command]``virtual-host-gatherer`` tool are located at [path]`
 After selecting menu:Create[VMware-based] enter the location of your VMware-based virtual host.
 Enter a [guimenu]``Label``, [guimenu]``Hostname``, [guimenu]``Port``, [guimenu]``Username`` and [guimenu]``Password``.
 Finally click the btn:[Add Virtual Host Manager] button.
-For detailed information on working with a VMware-based Virtual Host Manager, see
-xref:administration:virtual-hosts.adoc[].
+For detailed information on working with a VMware-based Virtual Host Manager, see xref:administration:virtual-hosts.adoc[].
 
 
 image::systems_virtual_host_managers_vmware.png[scaledwidth=80%]
@@ -173,5 +172,3 @@ virtualhostmanager.listVirtualHostManagers(session)
 ----
 virtualhostmanager.getDetail(session, label)
 ----
-
-
