--- a/modules/reference/pages/users/active-users.adoc
+++ b/modules/reference/pages/users/active-users.adoc
@@ -10,7 +10,7 @@ There are four columns of information for each user:
 
 * [guimenu]``Username`` -- The login name of the user.
 Clicking a user name displays the [guimenu]``User Details`` page for the user.
-Refer to xref:reference:users/user-details.adoc[] for more information.
+For more information, see xref:reference:users/user-details.adoc[]. 
 * [guimenu]``Real Name`` -- The full name of the user (last name, first name).
 * [guimenu]``Roles`` -- List of the user's privileges, such as organization administrator, channel administrator and normal user.
 Users can have multiple roles.
@@ -18,4 +18,3 @@ Users can have multiple roles.
 
 
 image::users_user_list.png[scaledwidth=80%]
-
