--- a/modules/reference/pages/systems/advanced-search.adoc
+++ b/modules/reference/pages/systems/advanced-search.adoc
@@ -13,11 +13,10 @@ Type the keyword, select the criterion to search by, use the radio buttons to sp
 To list all systems that do _not_ match the criteria, select the [guimenu]``Invert Result`` check box.
 
 The results appear at the bottom of the page.
-For details on how to use the resulting system list, refer to xref:reference:systems/systems-list.adoc[].
+For more on how to use the system list, see xref:reference:systems/systems-list.adoc[].
 
 [NOTE]
 ====
 If you add a distribution, newly synchronize channels, or register a system with a {productname} server, it may take several minutes for it to be indexed and appear in search results.
 To force the rebuild of the search index, enter [command]``rhn-search cleanindex`` on the command line and wait until the rebuild is finished.
 ====
-
