--- a/modules/reference/pages/systems/autoinst-overview.adoc
+++ b/modules/reference/pages/systems/autoinst-overview.adoc
@@ -19,7 +19,7 @@ It is not currently available for systems using Salt (system type [systemitem]``
 Kickstart files can be created, modified, and managed within the {productname} Web interface.
 
 {productname} also features the Cobbler installation server.
-Refer to xref:client-configuration:cobbler.adoc[] for more information.
+For more information, see xref:client-configuration:cobbler.adoc[].
 
 
 {productname} provides an interface for developing Kickstart and {ay} profiles that can be used to install {rhel} or {sle} on either new or already-registered systems automatically according to certain specifications.
@@ -32,7 +32,5 @@ This overview page displays the status of automated installations (Kickstart and
 
 In the upper right area is the menu:Autoinstallation Actions[] section, which contains a series of links to management actions for your Kickstart or {ay}  profiles.
 
-Before reading through the various automated installation options on this page, it would be a good idea to review the following two sections for an introduction to both {ay} and Kickstart:
-
-* xref:client-configuration:autoyast.adoc[]
-* xref:client-configuration:kickstart.adoc[]
+For more on {ay}, see xref:client-configuration:autoyast.adoc[].
+For more on Kickstart, see xref:client-configuration:kickstart.adoc[].
