--- a/modules/reference/pages/systems/ssm-overview.adoc
+++ b/modules/reference/pages/systems/ssm-overview.adoc
@@ -181,10 +181,10 @@ See the scheduled change actions.
 
 Like in the menu:System Details[Channels > Configuration] tab, the subtabs here can be used to subscribe the selected systems to configuration channels and deploy and compare the configuration files on the systems.
 The channels are created in the [guimenu]``Manage Config Channels`` interface within the menu:Main Menu[Software] category.
-Refer to xref:reference:configuration/config-channels.adoc[] for channel creation instructions.
+For channel creation instructions, see xref:reference:configuration/config-channels.adoc[].
 
 To manage the configuration of a system, install the latest [path]``mgr-cfg*`` packages.
-Refer to xref:reference:configuration/config-menu.adoc#ref.webui.config.preparing[Preparing Systems for Configuration Management] for instructions on enabling and disabling scheduled actions for a system.
+For instructions on enabling and disabling scheduled actions for a system, see xref:reference:configuration/config-menu.adoc#ref.webui.config.preparing[Preparing Systems for Configuration Management].
 
 
 
@@ -322,7 +322,7 @@ You will be notified on the next page if that happens.
 To use Cobbler system records for autoinstallation, select [guimenu]``Create PXE Installation Configuration``.
 With PXE boot, you cannot only reinstall clients, but automatically install machines that do not have an operating system installed yet.
 {productname} and its network must be properly configured to enable boot using PXE.
-For more information on Cobbler and {kickstart} templates, refer to xref:client-configuration:cobbler.adoc[]
+For more information on Cobbler and {kickstart} templates, see xref:client-configuration:cobbler.adoc[].
 
 
 [NOTE]
@@ -376,7 +376,7 @@ image::systems_ssm_remote_command.png[scaledwidth=80%]
 
 
 First create a [path]``run`` file on the client systems to allow this function to operate.
-Refer to xref:reference:systems/system-details/sd-remote-command.adoc[] for instructions.
+For instructions, see xref:reference:systems/system-details/sd-remote-command.adoc[].
 Then identify a specific user, group, timeout period, and the script to run.
 Select a date and time to execute the command and click btn:[Schedule].
 
@@ -410,7 +410,7 @@ image::systems_ssm_audit.png[scaledwidth=80%]
 Enter the command and command line arguments, and the path to the XCCDF document.
 Then schedule the scan.
 All target systems are listed below with a flag whether they support OpenSCAP scans.
-For more details on OpenSCAP and audits, refer to xref:reference:audit/audit-menu.adoc[]
+For more details on OpenSCAP and audits, see xref:reference:audit/audit-menu.adoc[].
 
 
 
@@ -492,4 +492,4 @@ image::systems_ssm_misc_delete_confirm.png[scaledwidth=80%]
 
 Select the appropriate systems, then click the [guimenu]``Reboot Systems`` link to select these systems for reboot.
 
-To cancel a reboot action, see xref:reference:schedule/pending-actions.adoc[]
+For information about how to cancel a reboot action, see xref:reference:schedule/pending-actions.adoc[].
