--- a/modules/reference/pages/systems/system-details/sd-audit.adoc
+++ b/modules/reference/pages/systems/system-details/sd-audit.adoc
@@ -2,8 +2,7 @@
 = SD Audit [Management]
 
 Via the [guimenu]``Audit`` tab, view OpenSCAP scan results or schedule scans.
-For more information on auditing and OpenSCAP, refer to
-xref:reference:audit/audit-menu.adoc[].
+For more information on auditing and OpenSCAP, see xref:reference:audit/audit-menu.adoc[].
 
 
 image::system_details_traditional_list_audit.png[scaledwidth=80%]
