--- a/modules/reference/pages/systems/system-details/sd-patches.adoc
+++ b/modules/reference/pages/systems/system-details/sd-patches.adoc
@@ -2,7 +2,7 @@
 = SD Patches
 
 This subtab contains a list of patch (errata) alerts applicable to the system.
-Refer to xref:reference:navigation/patch-alert-icons.adoc[] for meanings of the icons on this tab.
+For the meanings of the icons used in this tab, see xref:reference:navigation/patch-alert-icons.adoc[].
 
 image::system_details_traditional_software_patches.png[scaledwidth=80%]
 
