--- a/modules/reference/pages/systems/system-details/sd-provisioning.adoc
+++ b/modules/reference/pages/systems/system-details/sd-provisioning.adoc
@@ -32,8 +32,8 @@ Choose from the list of available profiles.
 
 [NOTE]
 ====
-You must first create a profile before it appears on this subtab.
-If you have not created any profiles, refer to xref:reference:systems/autoinst-profiles.adoc[] before scheduling an autoinstallation for a system.
+You must create a profile before it appears on this subtab.
+For more information about profiles, see xref:reference:systems/autoinst-profiles.adoc[].
 ====
 
 To alter autoinstallation settings, click the btn:[Advanced Configuration] button.
@@ -83,7 +83,7 @@ Understanding this hierarchy can alleviate confusion when using variables in {ki
 ====
 
 Using variables are one part of the larger Cobbler infrastructure for creating templates that can be shared between multiple profiles and systems.
-For more information about Cobbler and {kickstart} templates, refer to xref:client-configuration:cobbler.adoc[].
+For more information about Cobbler and {kickstart} templates, see xref:client-configuration:cobbler.adoc[].
 
 
 
@@ -108,7 +108,8 @@ If a power management operation succeeds on a system, it will also be noted in i
 Power management functionalities can also be used from the system set manager to operate on multiple systems at the same time.
 Specifically, you can change power management configuration parameters or apply operations (power on, off, reboot) to multiple systems at once:
 
-. Add the respective systems to the system set manager as described in xref:reference:systems/ssm-overview.adoc[].
+. Add the respective systems to the system set manager.
+For more information, see xref:reference:systems/ssm-overview.adoc[].
 . Select systems on the menu:Main Menu[Systems > Overview], then menu:Main Menu[System Set Manager >  Provisioning > Power Management Configuration] to change one or more configuration parameters for all systems in the set. Note that any field left blank will not alter the configuration parameter in selected systems.
 . When all configuration parameters are set correctly, click menu:Main Menu[Systems > System Set Manager >  Provisioning > Power Management Operations] to power on, off or reboot systems from the set.
 
