--- a/modules/reference/pages/systems/system-details/sd-remote-command.adoc
+++ b/modules/reference/pages/systems/system-details/sd-remote-command.adoc
@@ -42,5 +42,4 @@ touch /etc/sysconfig/rhn/allowed-actions/script/run
 When the setup is complete, refresh the page to view the text boxes for remote commands.
 Identify a specific user, group, and timeout period, and the script to run.
 Select a date and time to execute the command, then click btn:[Schedule] or add the remote command to an action chain.
-For further information on action chains, see xref:reference:schedule/action-chains.adoc[].
-
+For more about action chains, see xref:reference:schedule/action-chains.adoc[].
