Remove 'main menu' from title & nav

--- a/modules/reference/nav-reference-manual.adoc
+++ b/modules/reference/nav-reference-manual.adoc
@@ -7,7 +7,7 @@ ifndef::backend-pdf[]
 *** xref:navigation/navigation-menu.adoc[Navigation]
 **** xref:navigation/top-bar.adoc[Top Bar]
 **** xref:navigation/left-navigation-bar.adoc[Left Navigation Bar]
-**** xref:navigation/categories-and-pages.adoc[Main Menu Categories]
+**** xref:navigation/categories-and-pages.adoc[Categories]
 **** xref:navigation/tabs-subtabs.adoc[Tabs and Subtabs]
 **** xref:navigation/patch-alert-icons.adoc[Patch Alert Icons]
 **** xref:navigation/notification-messages-icon.adoc[Notification Messages Icon]
