--- a/modules/reference/pages/navigation/categories-and-pages.adoc
+++ b/modules/reference/pages/navigation/categories-and-pages.adoc
@@ -1,5 +1,5 @@
 [[ref.webui.intro.categories_pages]]
-= Main Menu Categories
+= Categories
 
 This section summarizes all of the categories and primary pages (those linked from the left navigation bar) within the {productname} Web interface ({webui}). It does not list the many subpages, tabs and subtabs accessible from the individual pages.
 Each area of the Web interface is explained in detail later in this guide.
