--- a/modules/client-configuration/pages/autoinstallation-methods.adoc
+++ b/modules/client-configuration/pages/autoinstallation-methods.adoc
@@ -2,28 +2,16 @@
 = Introduction
 
 
+Kickstart and {ay} configuration files allow you to automate system installations for traditional clients.
+This is especially useful if you need to install a large number of clients.
 
+For {sle} clients, use {ay}.
+When you have created an {ay} file, you can upload it and manage it with {productname}.
 
-.Autoinstallation Types: {ay} and Kickstart
-[NOTE]
-====
-In the following section, {ay} and {ay} features apply for {sle} client systems only.
+For {rhel} clients, use Kickstart.
+Kickstart files are created, modified, and managed within the {productname} {webui}.
 
-For {rhela} systems, use Kickstart and Kickstart features.
-====
+The Cobbler installation server allows you to automate baremetal installations.
+It uses DHCP to access a PXE boot server, and can be used in virtualized environments.
 
-//TODO We need to add an alternative explanation for automating salt installations. This is what Salt was designed for. We should provide examples to clarify. The following admon comes acrross as "negative".
-
-.Auto-Installing Salt Minions Currently Not Supported
-[IMPORTANT]
-====
-This procedure will work for traditionally  managed systems (system type [systemitem]``management``).
-
-Autoinstallation is not currently available for systems using Salt (system type [systemitem]``salt``).
-====
-
-{ay} and Kickstart configuration files allow administrators to create an environment for automating otherwise time-consuming system installations, such as multiple servers or workstations. {ay} files have to be uploaded to be managed with {productname}.
-Kickstart files can be created, modified, and managed within the {productname} Web interface.
-
-{productname} also features the Cobbler installation server.
-For more information on Cobbler, see xref:client-configuration:cobbler.adoc[].
+It is also possible to perform a disconnected setup, in an environment where you cannot access the internet.
