Updated filename in nav

--- a/modules/retail/nav-retail.adoc
+++ b/modules/retail/nav-retail.adoc
@@ -11,7 +11,7 @@ ifndef::backend-pdf[]
 *** xref:retail-install-setup.adoc[Setting up]
 *** xref:retail-deploy-terminals.adoc[Deploying Terminals]
 // Formulas
-** xref:retail-formulas.adoc[Formulas]
+** xref:retail-formulas-intro.adoc[Formulas]
 *** xref:retail-formula-bind.adoc[Bind Formula]
 *** xref:retail-formula-branchnetwork.adoc[Branch Network Formula]
 *** xref:retail-formula-dhcpd.adoc[DHCPd Formula]
