--- a/modules/client-configuration/pages/autoinstallation-methods.adoc
+++ b/modules/client-configuration/pages/autoinstallation-methods.adoc
@@ -11,7 +11,7 @@ When you have created an {ay} file, you can upload it and manage it with {produc
 For {rhel} clients, use Kickstart.
 Kickstart files are created, modified, and managed within the {productname} {webui}.
 
-The Cobbler installation server allows you to automate baremetal installations.
+The Cobbler installation server allows you to automate bare-metal installations.
 It uses DHCP to access a PXE boot server, and can be used in virtualized environments.
 
 It is also possible to perform a disconnected setup, in an environment where you cannot access the internet.
