--- a/modules/administration/pages/virtual-hosts.adoc
+++ b/modules/administration/pages/virtual-hosts.adoc
@@ -111,7 +111,7 @@ If you do not refresh the data from a new Virtual Host Manager, host data will n
 ====
 +
 
-. View inventoried ESXi host objects and resources by selecting menu:Systems[Virtual Systems].
+. View inventoried ESXi host objects and resources by selecting menu:System List[Virtual Systems].
 
 [NOTE]
 ====
