--- a/modules/administration/pages/virtual-hosts.adoc
+++ b/modules/administration/pages/virtual-hosts.adoc
@@ -115,6 +115,8 @@ If you do not refresh the data from a new Virtual Host Manager, host data will n
 
 [NOTE]
 ====
-Depending on your environment and settings, you might receive an ``invalid certificate`` error when you connect to the server.
-If this occurs, check that your SSL certificate is current, run the [command]``update-ca-certificates`` command on the command line to re-trust your certificate, and restart the spacewalk services.
+Depending on your environment and settings, you might receive an ``invalid certificate`` error when you connect to the ESXi server from a web browser using HTTPS.
+If this occurs, refreshing the data from the virtual hosts server will fail.
+To correct the problem, extract the certificate from the ESXi server, and copy it to [path]``/etc/pki/trust/anchors``.
+Re-trust the certificate by running the [command]``update-ca-certificates`` command on the command line, and restart the spacewalk services.
 ====
