Menu item updates: Systems -> Systems List

--- a/modules/administration/pages/virtual-hosts.adoc
+++ b/modules/administration/pages/virtual-hosts.adoc
@@ -9,7 +9,7 @@
 
 Foreign virtual hosts (such as vCenter and vSphere ESXi) can be inventoried using the [guimenu]``Virtual Host Manager``.
 From the vSphere Client you can define roles and permissions for vCenter and vSphere ESXi users allowing vSphere objects and resources to be imported and inventoried by {productname}.
-Objects and resources are then displayed as foreign hosts on the {productname} menu:Systems[Virtual Systems] page.
+Objects and resources are then displayed as foreign hosts on the {productname} menu:System List[Virtual Systems] page.
 
 The following sections will guide you through:
 
@@ -107,7 +107,7 @@ image::systems_virtual_host_managers_vmware.png[scaledwidth=80%]
 
 [IMPORTANT]
 ====
-If you do not refresh the data from a new Virtual Host Manager, host data will not be inventoried and therefore will not be displayed under menu:Systems[Virtual Systems].
+If you do not refresh the data from a new Virtual Host Manager, host data will not be inventoried and therefore will not be displayed under menu:System List[Virtual Systems].
 ====
 +
 
