--- a/modules/salt/pages/scale-minions.adoc
+++ b/modules/salt/pages/scale-minions.adoc
@@ -33,6 +33,11 @@ For larger installations, this number may be increased by editing the following 
 LimitNOFILE=16384
 ----
 
+////
+This content is superceded by the content in modules/salt/pages/salt-rate-limiting.adoc
+Commenting rather than deleting for now, in case there's content in here that needs to be resurrected. LKB 2019-06-12
+
+
 [[bp.chap.salt.minion.scaleability.timeouts]]
 == Salt Timeouts
 
@@ -91,6 +96,8 @@ This way, we can quickly detect which targeted minions are unreachable, and then
 # salt_presence_ping_timeout = 4
 # salt_presence_ping_gather_job_timeout = 1
 ----
+
+////
 
 === Salt SSH Minions (SSH Push)
 
