minion needs to be restarted after bootstrap

--- a/modules/administration/pages/virtualization.adoc
+++ b/modules/administration/pages/virtualization.adoc
@@ -315,6 +315,10 @@ Apart from being able to serve as a host for {kvm} or {xen} guests, which are ma
 ** Execute the bootstrap script to register the {vmhost}.
 +
 
+[IMPORTANT]
+====
+After bootstrap, Salt minions need to be restarted in order to get instant virtual machines changes reflected in {productname}.
+====
 
 [[sec.virtualization.autoinstall.req_vmhost.salt]]
 ==== {vmhost} setup on Salt clients
