--- a/modules/installation/pages/install-server-unified.adoc
+++ b/modules/installation/pages/install-server-unified.adoc
@@ -35,13 +35,6 @@ image::unifiedinstaller-extensions.png[scaledwidth=80%]
 Mandatory modules are pre-selected and you cannot disable them.
 +
 
-.Graphical Desktop Environment
-[NOTE]
-====
-The default {productname} server installation does not enable a graphical desktop environment.  If you want to run setup tools such {yast} with a graphical interface, select the [guimenu]``Desktop Applications Module``.
-====
-+
-
 image::unifiedinstaller-addon.png[scaledwidth=80%]
 . OPTIONAL: In the [guimenu]``Add On Product`` screen, select any additional or add-on products you require, and click btn:[Next].
 . In the [guimenu]``System Role`` screen, check the [guimenu]``SUSE Manager Server`` checkbox, and click btn:[Next].
@@ -49,7 +42,19 @@ image::unifiedinstaller-addon.png[scaledwidth=80%]
 . In the [guimenu]``Clock and Time Zone`` screen, enter your region and timezone, and click btn:[Next].
 . In the [guimenu]``Local Users`` screen, create a new user, and click btn:[Next].
 . In the [guimenu]``System Administrator "root"`` screen, create the "root" user, and click btn:[Next].
-. Review the settings on the [guimenu]``Installation Settings`` screen, and then click btn:[Install].
+. Review the settings on the [guimenu]``Installation Settings`` screen.
++
+.Graphical Desktop Environment
+[NOTE]
+====
+The default {productname} server installation does not enable a
+graphical desktop environment.  If you want to run setup tools such
+{yast} with a graphical interface local on the {productname} server,
+click [guimenu]``Software`` and select the [guimenu]``X Window System``
+pattern.
+====
++
+On the [guimenu]``Installation Settings`` screen click btn:[Install].
 
 When the installation procedure has finished, you can check that you have all the required modules by using the [command]``SUSEConnect --status-text`` command at a command prompt.
 For {susemgr} Server, the expected modules are:
