default to ncurses interface

--- a/modules/installation/pages/server-setup.adoc
+++ b/modules/installation/pages/server-setup.adoc
@@ -30,7 +30,7 @@ This section will guide you through {productname} setup procedures.
 . From the introduction screen select menu:SUSE Manager Setup[Setup SUSE Manager from scratch] and click btn:[Next] to continue.
 
 . Enter an email address to receive status notifications and click btn:[Next] to continue.
-Note that {productname} can sometimes send a large volume of notification emails.
+{productname} can sometimes send a large volume of notification emails.
 You can disable email notifications in the {webui} after setup, if you need to.
 +
 
@@ -49,14 +49,14 @@ Without this password it will not be possible to set up a {productname} Proxy Se
 . Click btn:[Next] to continue.
 +
 
-image::quickstart-mgr-setup4.png[scaledwidth=80%]
+image::quickstart-mgr-setup4-ncurses.png[scaledwidth=80%]
 
 . From the menu:SUSE Manager Setup[Database Settings] screen, enter a database user and password and click btn:[Next] to continue.
 Passwords must be at at least seven characters in length, and must not contain spaces, single or double quotation marks (``'`` or ``"``), exclamation marks (``!``), or dollar signs (``$``).
 Always store your passwords in a secure location.
 +
 
-image::quickstart-mgr-setup5.png[scaledwidth=80%]
+image::quickstart-mgr-setup5-ncurses.png[scaledwidth=80%]
 
 . Click btn:[Next] to continue.
 
