Remove Grafana from Monitoring Chapter
As long as we do not know how we can ship it, we should not have it in the docs

--- a/modules/administration/pages/prometheus.adoc
+++ b/modules/administration/pages/prometheus.adoc
@@ -9,12 +9,14 @@ Prometheus is a monitoring tool, originally built at SoundCloud, that is used to
 Unlike other monitoring systems, Prometheus collects metrics using HTTP pulls, allowing for higher performance and scalability.
 Prometheus is an open-source software project, mostly written in Go, and its source code is available at https://github.com/prometheus/.
 
+////
 Grafana is a tool for data visualization, monitoring and analysis.
 It is used to create dashboards with panels representing specific metrics over a set period of time.
 Grafana is commonly used together with Prometheus, but also supports other data sources such as ElasticSearch, MySQL, PostgreSQL, and Influx DB.
 For more information about Grafana, see: https://grafana.com/docs/.
+////
 
-A Grafana package is included in the SUSE Manager Client Tools for {sle}{nbsp}12 and {sle}{nbsp}15.
+A Prometheus package is included in the SUSE Manager Client Tools for {sle}{nbsp}12 and {sle}{nbsp}15.
 
 
 == Prometheus Metrics
@@ -210,7 +212,7 @@ image::monitoring_enable_services.png[scaledwidth=80%]
 image::monitoring_configure_formula.png[scaledwidth=80%]
 
 
-
+////
 == Set up Visualization with Grafana
 
 The Grafana website contains dozens of dashboards uploaded by the community.
@@ -237,3 +239,4 @@ systemctl enable --now grafana-server
 image::monitoring_grafana_example.png[scaledwidth=80%]
 
 Grafana settings are configured in [path]``/etc/grafana/grafana.ini``.
+////
