--- a/modules/installation/pages/server-setup.adoc
+++ b/modules/installation/pages/server-setup.adoc
@@ -84,7 +84,7 @@ For security it is recommended that the main administrator creates _low level ad
 ====
 
 
-.Procedure: Setup the Main Administration Account
+.Procedure: Setting Up the Main Administration Account
 . In the browser, enter the address provided after completing setup and open the {productname} {webui}.
 
 . Add your organization name to the menu:Create Organization[Organization Name] field.
@@ -98,7 +98,7 @@ For security it is recommended that the main administrator creates _low level ad
 
 image::quickstart-mgr-setup-admin1.png[scaledwidth=80%]
 
-You should now be presented with the {productname} menu:Home[Overview] page.
+You are now presented with the {productname} menu:Home[Overview] page.
 // In the next section you will prepare the server for connecting the first client.
 
 
@@ -133,7 +133,7 @@ When the credentials are confirmed with a check-mark icon, proceed with <<proc-q
 Wait a moment for the products list to populate.
 If you previously registered with {scc} a list of products will populate the table.
 This table lists architecture, channels, and status information.
-For more information, see xref:reference/admin/setup-wizard.adoc[Wizard].
+For more information, see xref:reference:admin/setup-wizard.adoc[Wizard].
 +
 
 image::admin_suse_products.png[scaledwidth=80%]
