Bring back some parts we are allowed to say

--- a/modules/administration/pages/prometheus.adoc
+++ b/modules/administration/pages/prometheus.adoc
@@ -9,12 +9,10 @@ Prometheus is a monitoring tool, originally built at SoundCloud, that is used to
 Unlike other monitoring systems, Prometheus collects metrics using HTTP pulls, allowing for higher performance and scalability.
 Prometheus is an open-source software project, mostly written in Go, and its source code is available at https://github.com/prometheus/.
 
-////
 Grafana is a tool for data visualization, monitoring and analysis.
 It is used to create dashboards with panels representing specific metrics over a set period of time.
 Grafana is commonly used together with Prometheus, but also supports other data sources such as ElasticSearch, MySQL, PostgreSQL, and Influx DB.
 For more information about Grafana, see: https://grafana.com/docs/.
-////
 
 A Prometheus package is included in the SUSE Manager Client Tools for {sle}{nbsp}12 and {sle}{nbsp}15.
 
@@ -212,8 +210,7 @@ image::monitoring_enable_services.png[scaledwidth=80%]
 image::monitoring_configure_formula.png[scaledwidth=80%]
 
 
-////
-== Set up Visualization with Grafana
+== Visualization with Grafana
 
 The Grafana website contains dozens of dashboards uploaded by the community.
 For an example {productname} dashboard to help you to get started, see https://grafana.com/dashboards/10277.
@@ -222,6 +219,7 @@ For more information, see: https://grafana.com/dashboards
 To use Grafana with {productname}, you need to have enabled metrics in the {productname} {webui}, and configured your Prometheus instance to collect those metrics.
 
 
+////
 .Procedure: Setting up Grafana
 
 . Install the [package]``grafana`` package:
