--- a/modules/administration/pages/prometheus.adoc
+++ b/modules/administration/pages/prometheus.adoc
@@ -14,7 +14,7 @@ It is used to create dashboards with panels representing specific metrics over a
 Grafana is commonly used together with Prometheus, but also supports other data sources such as ElasticSearch, MySQL, PostgreSQL, and Influx DB.
 For more information about Grafana, see: https://grafana.com/docs/.
 
-A Grafana package is included in the SUSE Manager Client Tools for {sle}{nbsp}12 and {sle}{nbsp}15.
+A Prometheus package is included in the SUSE Manager Client Tools for {sle}{nbsp}12 and {sle}{nbsp}15.
 
 
 == Prometheus Metrics
@@ -210,8 +210,7 @@ image::monitoring_enable_services.png[scaledwidth=80%]
 image::monitoring_configure_formula.png[scaledwidth=80%]
 
 
-
-== Set up Visualization with Grafana
+== Visualization with Grafana
 
 The Grafana website contains dozens of dashboards uploaded by the community.
 For an example {productname} dashboard to help you to get started, see https://grafana.com/dashboards/10277.
@@ -220,6 +219,7 @@ For more information, see: https://grafana.com/dashboards
 To use Grafana with {productname}, you need to have enabled metrics in the {productname} {webui}, and configured your Prometheus instance to collect those metrics.
 
 
+////
 .Procedure: Setting up Grafana
 
 . Install the [package]``grafana`` package:
@@ -237,3 +237,4 @@ systemctl enable --now grafana-server
 image::monitoring_grafana_example.png[scaledwidth=80%]
 
 Grafana settings are configured in [path]``/etc/grafana/grafana.ini``.
+////
