--- a/modules/reference/pages/systems/custom-system-info.adoc
+++ b/modules/reference/pages/systems/custom-system-info.adoc
@@ -16,4 +16,4 @@ Enter a suitable label and description, such as `Asset` and ``Precise location o
 The key will show up in the custom info keys list.
 
 When the key exists, you may assign a value to it through the [guimenu]``Custom Info`` tab of the [guimenu]``System Details`` page.
-For more on custom system information, see xref:reference:systems/system-details/sd-custom-info.adoc[] for instructions.
+For more on custom system information, see xref:reference:systems/system-details/sd-custom-info.adoc[].
