--- a/modules/reference/pages/users/user-details.adoc
+++ b/modules/reference/pages/users/user-details.adoc
@@ -74,7 +74,7 @@ The systems must be in system groups for which the user has permissions to manag
 As the master account for your organization, the person holding this role can alter the privileges of all other accounts of this organization, and conduct any of the tasks available to the other roles.
 Like with other roles, there can be multiple {productname} administrators.
 Go to menu:Main Menu[Admin > Users] and click the check box in the [guimenu]``SUSE Manager Admin`` row.
-For more information, see xref:reference:admin/users.adoc[]
+For more information, see xref:reference:admin/users.adoc[].
 
 * A [guimenu]``SUSE Manager Administrator`` can create foreign organizations, but a [guimenu]``SUSE Manager Administrator`` can only create users for an organization if they have organization administrator privileges for this organization.
 * [guimenu]``Organization Administrator`` -- This role provides a user with all the permissions other administrators have, namely the activation key, configuration, channel, and system group administrator.
