Updates per feedback

--- a/modules/administration/pages/virtual-hosts.adoc
+++ b/modules/administration/pages/virtual-hosts.adoc
@@ -115,7 +115,7 @@ If you do not refresh the data from a new Virtual Host Manager, host data will n
 
 [NOTE]
 ====
-Depending on your environment and settings, you might receive an ``invalid certificate`` error when you connect to the ESXi server from a browser using HTTPS.
+Connecting to the ESXi server from a browser using HTTPS can sometimes log an ``invalid certificate`` error.
 If this occurs, refreshing the data from the virtual hosts server will fail.
 To correct the problem, extract the certificate from the ESXi server, and copy it to [path]``/etc/pki/trust/anchors``.
 Re-trust the certificate by running the [command]``update-ca-certificates`` command on the command line, and restart the spacewalk services.
