Added note to Salt, added tshooting to admin, added ref to retail.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -39,6 +39,7 @@ ifndef::backend-pdf[]
 *** xref:content-lifecycle.adoc[Content Lifecycle Management]
 // Troubleshooting
 ** xref:tshoot-intro.adoc[Troubleshooting]
+*** xref:tshoot-clienthang.adoc[Troubleshooting Client Hanging on Reboot]
 *** xref:tshoot-corruptrepo.adoc[Troubleshooting Corrupt Repositories]
 *** xref:tshoot-diskspace.adoc[Troubleshooting Disk Space]
 *** xref:tshoot-localcert.adoc[Troubleshooting Local Certificates]
