--- a/modules/salt/pages/salt-rate-limiting.adoc
+++ b/modules/salt/pages/salt-rate-limiting.adoc
@@ -50,7 +50,8 @@ However, to allow for quicker detection of unresponsive minions, the timeout val
 You can configure the presence ping parameters in [filename]``/etc/rhn/rhn.conf``, however the default values should be sufficient in most cases.
 
 A lower total presence ping timeout value will increase the chance of false negatives.
-In some cases, a minion might be marked as non-responding, when it is responding, but did not respond quickly enough.
+In some cases, a minion might be marked as non-responding, when it is responding but did not respond quickly enough.
+Additionally, setting this total presence ping timeout value too low could result in a client hanging at the boot screen.
 A higher total presence ping timeout will increase the accuracy of the test, as even slow minions will respond to the presence ping before timing out.
 Additionally, a higher presence ping timeout could limit throughput if you are targeting a large number of minions, when some of them are slow.
 
