Add saltboot Tshoot section to Admin, refer from Retail.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -46,6 +46,7 @@ ifndef::backend-pdf[]
 *** xref:tshoot-packages.adoc[Troubleshooting Packages]
 *** xref:tshoot-registerclones.adoc[Troubleshooting Registering Cloned Clients]
 *** xref:tshoot-rpctimeout.adoc[Troubleshooting RPC Timeouts]
+*** xref:tshoot-saltboot.adoc[Troubleshooting Saltboot]
 // Appendices
 // Commenting this out until we find the right place to put it. LKB 2019-03-21
 // Including it again; it's an important bit of info. ke 2019-05-09
@@ -137,6 +138,8 @@ include::modules/administration/pages/tshoot-packages.adoc[leveloffset=+2]
 include::modules/administration/pages/tshoot-registerclones.adoc[leveloffset=+2]
 
 include::modules/administration/pages/tshoot-rpctimeout.adoc[leveloffset=+2]
+
+include::modules/administration/pages/tshoot-saltboot.adoc[leveloffset=+2]
 
 // Appendices
 // Commenting this out until we find the right place to put it. LKB 2019-03-21
