--- a/modules/retail/pages/retail-formula-saltboot.adoc
+++ b/modules/retail/pages/retail-formula-saltboot.adoc
@@ -48,3 +48,8 @@ This will ensure you use the latest available version.
 * In the [guimenu]``Partition encryption password`` field, enter a password if you want to encrypt the partition.
 * In the [guimenu]``Partition flags`` field, leave it empty.
 . Click btn:[Save Formula] to save your formula.
+
+
+== Troubleshooting the Saltboot Formula
+
+For more information on troubleshooting problems with the Saltboot formula, see xref:administration:tshoot-saltboot.adoc[].
