Install server cleanup ke (#519)
* for graphical mode, install x11 pattern
* default to ncurses interface
* fix xref
* cosmetic changes

--- a/modules/installation/pages/install-server-unified.adoc
+++ b/modules/installation/pages/install-server-unified.adoc
@@ -31,17 +31,30 @@ image::unifiedinstaller-registration.png[scaledwidth=80%]
 // The registration server offers update repositories.
 +
 image::unifiedinstaller-extensions.png[scaledwidth=80%]
-. In the [guimenu]``Available Extensions and Modules`` screen, select additional extensions or modules you require, and click btn:[Next].
+. In the [guimenu]``Extension and Module Selection`` screen, select additional extensions or modules you require, and click btn:[Next].
 Mandatory modules are pre-selected and you cannot disable them.
 +
+
 image::unifiedinstaller-addon.png[scaledwidth=80%]
 . OPTIONAL: In the [guimenu]``Add On Product`` screen, select any additional or add-on products you require, and click btn:[Next].
 . In the [guimenu]``System Role`` screen, check the [guimenu]``SUSE Manager Server`` checkbox, and click btn:[Next].
-. In the [guimenu]``Suggested Partitioning`` screen, accept the default values, or use the btn:[Guided Setup] or btn:[Expert Partitioner] options to customize your partitioning model, and click btn:[Next].
+. In the [guimenu]``Suggested Partitioning`` screen, either accept the default values, or use the btn:[Guided Setup] or btn:[Expert Partitioner] options to customize your partitioning model, and click btn:[Next].
 . In the [guimenu]``Clock and Time Zone`` screen, enter your region and timezone, and click btn:[Next].
 . In the [guimenu]``Local Users`` screen, create a new user, and click btn:[Next].
 . In the [guimenu]``System Administrator "root"`` screen, create the "root" user, and click btn:[Next].
-. Review the settings on the [guimenu]``Installation Settings`` screen, and then click btn:[Install].
+. Review the settings on the [guimenu]``Installation Settings`` screen.
++
+.Graphical Desktop Environment
+[NOTE]
+====
+The default {productname} server installation does not enable a
+graphical desktop environment.  If you want to run setup tools such
+{yast} with a graphical interface local on the {productname} server,
+click [guimenu]``Software`` and select the [guimenu]``X Window System``
+pattern.
+====
++
+On the [guimenu]``Installation Settings`` screen click btn:[Install].
 
 When the installation procedure has finished, you can check that you have all the required modules by using the [command]``SUSEConnect --status-text`` command at a command prompt.
 For {susemgr} Server, the expected modules are:
