--- a/modules/installation/pages/server-setup.adoc
+++ b/modules/installation/pages/server-setup.adoc
@@ -30,7 +30,7 @@ This section will guide you through {productname} setup procedures.
 . From the introduction screen select menu:SUSE Manager Setup[Setup SUSE Manager from scratch] and click btn:[Next] to continue.
 
 . Enter an email address to receive status notifications and click btn:[Next] to continue.
-Note that {productname} can sometimes send a large volume of notification emails.
+{productname} can sometimes send a large volume of notification emails.
 You can disable email notifications in the {webui} after setup, if you need to.
 +
 
@@ -49,14 +49,14 @@ Without this password it will not be possible to set up a {productname} Proxy Se
 . Click btn:[Next] to continue.
 +
 
-image::quickstart-mgr-setup4.png[scaledwidth=80%]
+image::quickstart-mgr-setup4-ncurses.png[scaledwidth=80%]
 
 . From the menu:SUSE Manager Setup[Database Settings] screen, enter a database user and password and click btn:[Next] to continue.
 Passwords must be at at least seven characters in length, and must not contain spaces, single or double quotation marks (``'`` or ``"``), exclamation marks (``!``), or dollar signs (``$``).
 Always store your passwords in a secure location.
 +
 
-image::quickstart-mgr-setup5.png[scaledwidth=80%]
+image::quickstart-mgr-setup5-ncurses.png[scaledwidth=80%]
 
 . Click btn:[Next] to continue.
 
@@ -84,7 +84,7 @@ For security it is recommended that the main administrator creates _low level ad
 ====
 
 
-.Procedure: Setup the Main Administration Account
+.Procedure: Setting Up the Main Administration Account
 . In the browser, enter the address provided after completing setup and open the {productname} {webui}.
 
 . Add your organization name to the menu:Create Organization[Organization Name] field.
@@ -98,7 +98,7 @@ For security it is recommended that the main administrator creates _low level ad
 
 image::quickstart-mgr-setup-admin1.png[scaledwidth=80%]
 
-You should now be presented with the {productname} menu:Home[Overview] page.
+You are now presented with the {productname} menu:Home[Overview] page.
 // In the next section you will prepare the server for connecting the first client.
 
 
@@ -133,7 +133,7 @@ When the credentials are confirmed with a check-mark icon, proceed with <<proc-q
 Wait a moment for the products list to populate.
 If you previously registered with {scc} a list of products will populate the table.
 This table lists architecture, channels, and status information.
-For more information, see xref:reference/admin/setup-wizard.adoc[Wizard].
+For more information, see xref:reference:admin/setup-wizard.adoc[Wizard].
 +
 
 image::admin_suse_products.png[scaledwidth=80%]
