--- a/modules/administration/pages/tshoot-clienthang.adoc
+++ b/modules/administration/pages/tshoot-clienthang.adoc
@@ -21,5 +21,5 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 
 Sometimes when attempting to reboot a Salt minion after applying a formula, the terminal will hang at the boot screen.
 This can be caused by a presence ping timeout value being set at a value that is too low.
-You can adjust the presence ping timeout value to fix this problem
+You can adjust the presence ping timeout value to fix this problem.
 For more information about ping timeouts on Salt minions, see xref:salt:salt-rate-limiting.adoc[].
